--- a/src/UserBundle/Resources/views/Admin/users.html.twig
+++ b/src/UserBundle/Resources/views/Admin/users.html.twig
@@ -7,7 +7,37 @@
       <p>Bienvenue sur l'espace de gestion des membres.</p>
       <div class="card">
           <div class="card-content">
-              Fonctionnalité en cours de développement.
+              {% if users %}
+                  <table class="striped">
+                      <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Prénom</th>
+                            <th>Nom</th>
+                            <th>Adresse mail</th>
+                            <th>Rôles</th>
+                            <th>Action</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                      {% for user in users %}
+                          <tr>
+                            <td>{{ user.id }}</td>
+                            <td>{{ user.firstname }}</td>
+                            <td>{{ user.lastname }}</td>
+                            <td>{{ user.email }}</td>
+                            <td>{{ user.roles|join(', ') }}</td>
+                            <td>
+                                <a href="{{ path('admin_users_edit', {'id': user.id}) }}" class="btn-floating"><i class="tiny material-icons">edit</i></a>
+                                <a href="{{ path('admin_users_delete', {'id': user.id}) }}" class="btn-floating red"><i class="tiny material-icons">clear</i></a>
+                            </td>
+                          </tr>
+                      {% endfor %}
+                      </tbody>
+                  </table>
+              {% else %}
+                  <center style="color: red;">Aucun membre trouvé.</center>
+              {% endif %}
           </div>
       </div>
   </div>
