--- a/src/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/UserBundle/Resources/views/Default/index.html.twig
@@ -10,7 +10,8 @@
             <div class="card-content">
               <span class="card-title">Mes informations</span>
               <p>ID: <b>{{ app.user.id }}</b></p>
-              <p>Nom complet: <b>{{ app.user.firstname }} {{ app.user.lastname }}</b></p>
+              <p>Prénom: <b>{{ app.user.firstname }}</b></p>
+              <p>Nom: <b>{{ app.user.lastname }}</b></p>
               <p>Adresse mail: <b>{{ app.user.email }}</b></p>
               <a class="waves-effect waves-light btn modal-trigger" href="#editAccount" style="margin-top: 10px;"><i class="material-icons left">edit</i>Modifier</a>
             </div>
