--- a/src/UserBundle/Resources/views/Admin/users.html.twig
+++ b/src/UserBundle/Resources/views/Admin/users.html.twig
@@ -28,7 +28,7 @@
                             <td>{{ user.email }}</td>
                             <td>{{ user.roles|join(', ') }}</td>
                             <td>
-                                <a href="{{ path('admin_users_edit', {'id': user.id}) }}" class="btn-floating"><i class="tiny material-icons">edit</i></a>
+                                <a href="#!" class="btn-floating"><i class="tiny material-icons">edit</i></a>
                                 <a href="{{ path('admin_users_delete', {'id': user.id}) }}" class="btn-floating red"><i class="tiny material-icons">clear</i></a>
                             </td>
                           </tr>
