--- a/src/UserBundle/Resources/views/Default/reviews.html.twig
+++ b/src/UserBundle/Resources/views/Default/reviews.html.twig
@@ -33,7 +33,7 @@
                                 {% endif %}
                             </td>
                             <td>
-                                <a class="btn-floating"><i class="tiny material-icons">edit</i></a>
+                                <a href="#!" class="btn-floating"><i class="tiny material-icons">edit</i></a>
                                 <a href="{{ path('account_reviews_delete', {'id': review.id}) }}" class="btn-floating red"><i class="tiny material-icons">delete</i></a>
                             </td>
                           </tr>
